--- a/roles/container/defaults/main.yaml
+++ b/roles/container/defaults/main.yaml
@@ -1,4 +1,5 @@
 ---
-src_dir: "{{ansible_env.HOME}}/src"
+archive_dir: "{{ansible_env.HOME}}/archives"
 
-runc_version: v1.1.9
+runc_version: 1.1.9
+containerd_version: 1.7.3
