--- a/roles/container/tasks/main.yaml
+++ b/roles/container/tasks/main.yaml
@@ -5,4 +5,9 @@
 
 - include_role:
     name: container
+    tasks_from: cni.yaml
+
+- include_role:
+    name: container
     tasks_from: containerd.yaml
+
