--- a/roles/container/tasks/containerd.yaml
+++ b/roles/container/tasks/containerd.yaml
@@ -33,3 +33,10 @@
     src: containerd.service
     dest: /usr/local/lib/systemd/system/containerd.service
   become: yes
+
+- name: enable containerd.service
+  ansible.builtin.systemd:
+    name: containerd.service
+    state: started
+    enabled: yes
+  become: yes
