--- a/roles/container/defaults/main.yaml
+++ b/roles/container/defaults/main.yaml
@@ -5,3 +5,6 @@ runc_version: 1.1.9
 containerd_version: 1.7.3
 buildkit_version: 0.12.1
 cni_plugin_version: 1.3.0
+rootlesskit_version: 2.0.0-alpha.0
+slirp4netns_version: 1.2.0
+nerdctl_version: 1.5.0
