--- a/roles/container/tasks/containerd.yaml
+++ b/roles/container/tasks/containerd.yaml
@@ -1,6 +1,6 @@
 ---
 - name: check if containerd archive exists
-  command: ls -l "{{archive_dir}}/containerd-{{containerd_version}}-linux-{{arch_bsd_sytle}}.tar.gz"
+  command: ls -l "{{archive_dir}}/containerd-{{containerd_version}}-linux-{{arch_bsd_style}}.tar.gz"
   ignore_errors: yes
   changed_when: no
   failed_when: no
@@ -8,14 +8,14 @@
 
 - name: download containerd
   get_url:
-    url: "https://github.com/containerd/containerd/releases/download/v{{containerd_version}}/containerd-{{containerd_version}}-linux-{{arch_bsd_sytle}}.tar.gz"
-    dest: "{{archive_dir}}/containerd-{{containerd_version}}-linux-{{arch_bsd_sytle}}.tar.gz"
+    url: "https://github.com/containerd/containerd/releases/download/v{{containerd_version}}/containerd-{{containerd_version}}-linux-{{arch_bsd_style}}.tar.gz"
+    dest: "{{archive_dir}}/containerd-{{containerd_version}}-linux-{{arch_bsd_style}}.tar.gz"
   when:
     - check_archive != 0
 
 - name: install containerd
   ansible.builtin.unarchive:
-    src: "{{archive_dir}}/containerd-{{containerd_version}}-linux-{{arch_bsd_sytle}}.tar.gz"
+    src: "{{archive_dir}}/containerd-{{containerd_version}}-linux-{{arch_bsd_style}}.tar.gz"
     dest: /usr/local/
     remote_src: yes
   become: yes
