--- a/roles/container/tasks/runc.yaml
+++ b/roles/container/tasks/runc.yaml
@@ -1,6 +1,6 @@
 ---
 - name: check if runc exists
-  command: ls -l "{{archive_dir}}/runc.{{arch_bsd_sytle}}-{{runc_version}}"
+  command: ls -l "{{archive_dir}}/runc.{{arch_bsd_style}}-{{runc_version}}"
   ignore_errors: yes
   changed_when: no
   failed_when: no
@@ -13,13 +13,13 @@
 
 - name: download runc
   get_url:
-    url: "https://github.com/opencontainers/runc/releases/download/v{{runc_version}}/runc.{{arch_bsd_sytle}}"
-    dest: "{{archive_dir}}/runc.{{arch_bsd_sytle}}-{{runc_version}}"
+    url: "https://github.com/opencontainers/runc/releases/download/v{{runc_version}}/runc.{{arch_bsd_style}}"
+    dest: "{{archive_dir}}/runc.{{arch_bsd_style}}-{{runc_version}}"
   when: check_archive.rc != 0
 
 - name: install runc
   copy:
-    src: "{{archive_dir}}/runc.{{arch_bsd_sytle}}-{{runc_version}}"
+    src: "{{archive_dir}}/runc.{{arch_bsd_style}}-{{runc_version}}"
     dest: /usr/local/bin/runc
     mode: 0755
     force: yes # overwrite when version up
