--- a/roles/container/tasks/rootlesskit.yaml
+++ b/roles/container/tasks/rootlesskit.yaml
@@ -11,7 +11,7 @@
     url: "https://github.com/rootless-containers/rootlesskit/releases/download/v{{rootlesskit_version}}/rootlesskit-{{arch_linux_style}}.tar.gz"
     dest: "{{archive_dir}}/rootlesskit-{{rootlesskit_version}}-{{arch_linux_style}}.tar.gz"
   when:
-    - check_archive != 0
+    - check_archive.rc != 0
 
 - name: install rootlesskit
   ansible.builtin.unarchive:
@@ -20,5 +20,5 @@
     remote_src: yes
   become: yes
   when:
-    - check_archive != 0
+    - check_archive.rc != 0
 
