--- a/roles/container/tasks/containerd.yaml
+++ b/roles/container/tasks/containerd.yaml
@@ -11,7 +11,7 @@
     url: "https://github.com/containerd/containerd/releases/download/v{{containerd_version}}/containerd-{{containerd_version}}-linux-{{arch_bsd_style}}.tar.gz"
     dest: "{{archive_dir}}/containerd-{{containerd_version}}-linux-{{arch_bsd_style}}.tar.gz"
   when:
-    - check_archive != 0
+    - check_archive.rc != 0
 
 - name: install containerd
   ansible.builtin.unarchive:
@@ -20,7 +20,7 @@
     remote_src: yes
   become: yes
   when:
-    - check_archive != 0
+    - check_archive.rc != 0
 
 - name: create systemd configs dir
   file:
